# OC

./: CMakeLists.txt  README.md
CP/: CMakeLists.txt  README.md  bestfit.md  power2.md  result.md
CP/include/: allocator.h  best_fit_allocator.h  power2_allocator.h
CP/src/: best_fit_allocator.c  main.c  power2_allocator.c
lab1/: CMakeLists.txt  README.md  main.c
lab1/include/: parent.h  utils.h
lab1/src/: child.c  parent.c  utils.c
lab2/: CMakeLists.txt  README.md  main.c
lab2/include/: lab2.h
lab2/src/: lab2.c
lab3/: CMakeLists.txt  README.md
lab3/include/: tools.h
lab3/src/: child.c  parent.c  tools.c
lab4/: CMakeLists.txt  README.md  main_dynamic.c  main_static.c
lab4/src/: lib1.c  lib2.c
lab4/tests/: test4.cpp
lab5/: CMakeLists.txt  README.md  controller.c  worker.c
lab5/include/: common.h  dict.h  message.h  node_manager.h  pending_ops.h
lab5/src/: dict.c  message.c  node_manager.c  pending_ops.c
lab5/tests/: test5_controller.cpp
lab8/: README.md
lab8/logs/: log_lab1.txt  log_lab2.txt  log_lab3.txt  log_lab4.txt  log_lab5.txt
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
